@@ -26,6 +26,8 @@
 	- permit waitpid to be used instead of reaping SIGCHLD (#163151).
 	- add tracking dependency for parameterized file digests.
 	- fix: hide dbiFoo() internals from C++'s inability to promote void *.
+	- fix: default _D_EXACT_NAMLEN(d) to strlen((d)->d_name) on non-linux.
+	- debugedit: permit -debuginfo extraction for executables with -O0.
 
 4.4.5 -> 4.4.6:
 	- start 4.4.6 development.
